<resources>
    <string name="content">北京博爱医院隶属于中国康复研究中心，成立于1988年10月。是我国惟一一家以康复医学为特色的三级甲等综合性医院，首都医科大学教学医院、北京高等医学院校临床教学基地和北京市医疗保险定点医院。2005年顺利通过北京地区医院评审，2006年顺利通过创建人民满意医院检查，2007年顺利通过医院管理年检查，并被北京奥组委指定为残奥会定点医院。如今，在现代康复领域，她已经发展成为我国成立最早、规模最大、模式先进、人才集中、学科全面、服务规范、手段齐全、流程完整、功能完善、专家众多的对残疾人进行全面康复的综合性研究机构和康复技术资源中心。成为中国康复医学发展史上的里程碑。医院发挥康复特色，不断扩展综合医疗业务，目前设有康复治疗科室、临床医疗科室、康复技术科室、医技科室、门诊科室近40个。还组建了截肢者会诊中心、偏瘫治疗中心、脑血管病治疗中心、言语听力康复国际合作中心、儿童脑瘫康复国际合作中心、白内障治疗中心、泌尿外科钬激光腔镜诊疗中心、自闭症康复治疗中心等专科治疗中心。医院主要以脊柱脊髓损伤、脑卒中、脑外伤、神经系统、截肢、骨关节伤病、小儿麻痹后遗症、小儿脑瘫等病症引起的功能障碍为康复治疗的对象。同时，对老年病、白内障、心血管系统、呼吸系统、泌尿系统等疾病开展系统的康复和治疗，具有较强的综合医疗和康复医疗实力。20年来，医院将现代康复技术与临床医学、祖国传统医学、康复工程学紧密结合，形成了以患者为中心的多学科合作的团队工作模式。为各类患者提供了从急性期抢救、早期干预到后期康复医疗的全面服务，使他们的身心功能得到了最大限度地恢复、补偿、改善和重建，增强了参与社会生活的能力，得以早日回归家庭和社会。20年来，“中康”各康复重点学科在国内的领先地位不断得到巩固，在国内外的美誉度不断提高，国内外慕名前来寻医问诊的患者日益增多，康复治疗工作量成倍增长。现在医院开放床位数是成立时的3。07倍。门诊诊疗量是成立时的10。88倍；急诊诊疗量是成立时的19。64倍；现在医院的住院患者人数是成立时的7。46倍，现在医院的年康复训练量是成立时的12。07倍，至今已经达到680多万人次，许许多多患者从这里走向新的生活。 20年来，北京博爱医院以高尚的医德、优质的服务、先进的技术、严格的管理、良好的秩序、幽雅的环境赢得了社会各界的广泛赞誉，已经连续多年被政府有关部门评为医院管理、物价计量、环境绿化、安全保卫、计划生育、锅炉管理、物业管理先进单位。党的十七大明确提出“发扬人道主义精神，发展残疾人事业”的要求。今年，中共中央、国务院对促进残疾人事业发展又作出了重大战略部署，提出了《关于促进残疾人事业发展的意见》，为在新的起点上加快残疾人事业的发展指明了方向。展望未来，北京博爱医院将在现有基础上，加速第二期工程的建设。届时，总占地面积将达到15万平方米，建筑面积达到30万平方米，医疗病床达到1000张以上，康复医学院大专生至博士研究生多层次的在校学生达到上千人。</string>
    <string name="version_code">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="changepassword">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="user_waring">用户名不能为空</string>
    <string name="password_waring">密码不能为空</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="app_name">博爱综合康复</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="evaluation0">初评</string>
    <string name="evaluation1">中评Ⅰ</string>
    <string name="evaluation2">末评</string>
    <string name="evaluation3">中评Ⅱ</string>
    <string name="evaluation4">中评Ⅲ</string>
    <string name="evaluation5">中评Ⅳ</string>
    <string name="evaluation6">中评Ⅴ</string>
    <string name="app_maker">评定人</string>
    <string name="app_date">评定日期</string>
    <string name="app_instruction">评定说明</string>
    <string name="msg_date">请选择评定日期</string>
    <string name="msg_save_fail">保存失败</string>
    <string name="msg_update_fail">更新失败</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_update_success">更新成功</string>
    <string name="msg_delete_fail">删除失败</string>
    <string name="msg_delete_success">删除成功</string>
    <string name="msg_getdate_fail">获取数据失败</string>
    <string name="msg_data_full">记录已满,不能继续添加评定</string>
    <string name="msg_isEmpty_warning">请检查填写是否完整</string>
    <string name="tittle_patient_info">患者列表</string>
    <string name="hospital_record">病案号</string>
    <string name="patient_name">姓名</string>
    <string name="patient_zhenduan">临床诊断</string>
    <string name="title_patient_add">添加患者</string>
    <string name="patient_brithday">出生日期</string>
    <string name="patient_sex">性别</string>
    <string name="patient_age">年龄</string>
    <string name="patient_nation">民族</string>
    <string name="patient_birth_locate">籍贯</string>
    <string name="patient_zhiwei">职位</string>
    <string name="patient_wh_chd">文化程度</string>
    <string name="patient_hy_zhk">婚姻状况</string>
    <string name="patient_p_keshi">科室</string>
    <string name="patient_p_jfly">费用来源</string>
    <string name="patient_first_releate_person">联系人</string>
    <string name="patient_tel">联系电话</string>
    <string name="patient_height">身高(cm)</string>
    <string name="patient_weight">体重(kg)</string>
    <string name="patient_p_bmi">BMI</string>
    <string name="patient_p_sqks">体型</string>
    <string name="patient_p_zhenduan">临床诊断</string>
    <string name="patient_lczd_icd">临床诊断ICD编码</string>
    <string name="patient_p_bbbw">病变部位</string>
    <string name="patient_bbbw_icd">病变部位ICD编码</string>
    <string name="patient_p_startdate">发病日期</string>
    <string name="patient_p_bingcheng">病程</string>
    <string name="patient_p_gnza">功能障碍</string>
    <string name="patient_p_fbjg">发病经过</string>
    <string name="patient_p_zljg">治疗经过</string>
    <string name="patient_p_kfjg">康复经过</string>
    <string name="patient_p_xy">收缩压(mmHg)</string>
    <string name="patient_shu_z_ya">舒张压(mmHg)</string>
    <string name="patient_p_xl">心率(bpm)</string>
    <string name="patient_p_bxl">靶心率(bpm)</string>
    <string name="patient_p_szbxl">水中靶心率(bpm)</string>
    <string name="patient_p_mb">脉搏</string>
    <string name="patient_p_xt">血糖(mmol/L)</string>
    <string name="patient_zl_xm">治疗项目</string>
    <string name="patient_zl_zt">诊疗状态</string>
    <string name="patient_sj_ap">时间安排</string>
    <string name="patient_zhliao_bw">治疗部位</string>
    <string name="patient_executor">录入者</string>
    <string name="patient_lr_time">录入时间</string>
    <string name="medical_history_date">病史采集日期</string>
    <string name="medical_history_relator">病史陈述者 </string>
    <string name="medical_history_reliable">病史可靠性</string>
    <string name="main_suit">主诉</string>
    <string name="disease_history">病残史</string>
    <string name="past_history">既往史</string>
    <string name="medical_history_record">疾病记录</string>
    <string name="add_medical_history_record">添加疾病记录</string>
    <string name="title_medical_add">添加就诊</string>
    <string name="hospital_room_record">病房号</string>
    <string name="hospital_department">科室</string>
    <string name="hospital_recovery_diagnosis">康复诊断</string>
    <string name="hospital_clinical_diagnosis">临床诊断</string>
    <string name="hospital_chief_complaint">主诉</string>
    <string name="hospital_past_history">既往史</string>
    <string name="tittle_patient_add">添加患者</string>
    <string name="assessment_species">评估项目</string>
    <string name="assessment_scores">评分成绩 </string>
    <string name="alyn_table_score1">Alyn水中适应性评定（WOTA1）</string>
    <string name="alyn_table_score2">Alyn水中适应性评定（WOTA2）</string>
    <string name="alyn1_date">评定日期</string>
    <string name="alyn1_instructions">评定说明</string>
    <string name="alyn1_title1">1.一般适应</string>
    <string name="alyn1_title2">2.从池边进入泳池：面朝水面坐着 </string>
    <string name="alyn1_title3">3.离开泳池到池边：在非站立位下握住池边通过双手推举抬升身体，转身并坐下 </string>
    <string name="alyn1_title4">4.在水中吹气泡 </string>
    <string name="alyn1_title5">5.在指导者的帮助下侧卧漂浮：指导者面对游泳者，握住躯干上的侧面-指令：将耳朵没入水中并侧躺着 </string>
    <string name="alyn1_title6">6.在指导者的帮助下仰卧漂浮：指导者面对游泳者，握住躯干上部的两侧。指令：向后躺下去 </string>
    <string name="alyn1_title7">7.溅水 </string>
    <string name="alyn1_title8">8.浸没将头部或面部浸入水中 </string>
    <string name="alyn1_title9">9.短臂或长臂抓握保持直立位置10秒 </string>
    <string name="alyn1_title10">10.利用双手沿着池边前进双脚不能着地。沿着墙壁移动1.5米。 </string>
    <string name="alyn1_title11">11.站于水中水深齐胸 </string>
    <string name="alyn1_title12">12.握住绳索水深齐胸 </string>
    <string name="alyn1_title13">13.坐于水中在指导者的大腿上，下巴在水下，10秒 </string>
    <string name="alyn1_total_scores">计算总分</string>
    <string name="alyn1_total_scores_centesmal">百分制得分</string>
    <string name="alyn2_title1">1A对水的一般适应 </string>
    <string name="alyn2_title2">2B经口吹气泡(>5秒) </string>
    <string name="alyn2_title3">3B经鼻吹气泡(>5秒)</string>
    <string name="alyn2_title4">4B头部浸入水中吹气泡(>5秒) </string>
    <string name="alyn2_title5">5B运动时有节律地呼气(10 次) </string>
    <string name="alyn2_title6">6B用口鼻交替呼气(3 次)</string>
    <string name="alyn2_title7">7C入水(坐于岸边,上肢和头部前伸) </string>
    <string name="alyn2_title8">8C出水(将身体推上池边,旋转至坐位)</string>
    <string name="alyn2_title9">9C坐于水中(盒状位置,保持 20 秒)</string>
    <string name="alyn2_title10">10C手扶池边扶手移动(3 米)</string>
    <string name="alyn2_title11">11C走着穿过泳池(6 米)</string>
    <string name="alyn2_title12">12C向前跳(6 米)</string>
    <string name="alyn2_title13">13C跳出和钻入水中(5 次)</string>
    <string name="alyn2_title14">14C改变体位,从坐位到仰卧漂浮位 </string>
    <string name="alyn2_title15">15C静态仰卧漂浮 5 秒(耳朵浸入水中,上下肢伸展，口鼻在水外) </string>
    <string name="alyn2_title16">16C改变体位,从仰卧位到站立位 </string>
    <string name="alyn2_title17">17C俯卧滑行,从池壁向治疗师(脸浸水 5秒)</string>
    <string name="alyn2_title18">18C改变体位,从俯卧漂浮位到站立位 </string>
    <string name="alyn2_title19">19C右侧长轴旋转(改变体位,仰卧漂浮位→俯卧位→仰卧)</string>
    <string name="alyn2_title20">20C左侧长轴旋转(改变体位,仰卧漂浮位→俯卧位→仰卧)</string>
    <string name="alyn2_title21">21C混合旋转(改变体位,从站立位或坐在岸边→俯卧→旋转至仰卧)</string>
    <string name="alyn2_title22">22C混合旋转(改变体位,从仰卧位→旋转至俯卧位→站立位) </string>
    <string name="alyn2_title23">23C潜水(于齐胸深的水位开始,双手触摸池底)(上浮) </string>
    <string name="alyn2_title24">24D仰卧推进(只用上肢,小幅度划水) </string>
    <string name="alyn2_title25">25D自由泳 </string>
    <string name="alyn2_title26">26D仰泳</string>
    <string name="alyn2_title27">27D蛙泳 </string>
    <string name="cancel">取消</string>
    <string name="pwSubmit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="mmt_date">评定日期</string>
    <string name="mmt_instructions">评定说明</string>
    <string name="mmt_part1">颈部</string>
    <string name="mmt_part2">躯干</string>
    <string name="mmt_part3">肩胛骨</string>
    <string name="mmt_part4">肩关节</string>
    <string name="mmt_part5">肘关节</string>
    <string name="mmt_part6">前臂</string>
    <string name="mmt_part7">腕</string>
    <string name="mmt_part8">四指</string>
    <string name="mmt_part9">拇指</string>
    <string name="mmt_part10">髋关节</string>
    <string name="mmt_part11">膝关节</string>
    <string name="mmt_part12">踝关节</string>
    <string name="mmt_part13">足趾</string>
    <string name="mmt_part14">拇趾</string>
    <string name="mmt_action1">前屈</string>
    <string name="mmt_action2">后伸</string>
    <string name="mmt_action3">旋转</string>
    <string name="mmt_action4">后伸</string>
    <string name="mmt_action5">骨盆上提</string>
    <string name="mmt_action6">外展</string>
    <string name="mmt_action7">上举</string>
    <string name="mmt_action8">下掣</string>
    <string name="mmt_action9">内收</string>
    <string name="mmt_action10">前方上举</string>
    <string name="mmt_action11">后方上举</string>
    <string name="mmt_action12">侧方上举</string>
    <string name="mmt_action13">水平外展</string>
    <string name="mmt_action14">水平内收</string>
    <string name="mmt_action15">外旋</string>
    <string name="mmt_action16">内旋</string>
    <string name="mmt_action17">屈曲</string>
    <string name="mmt_action18">伸展</string>
    <string name="mmt_action19">旋前</string>
    <string name="mmt_action20">旋后</string>
    <string name="mmt_action21">掌屈</string>
    <string name="mmt_action22">背伸</string>
    <string name="mmt_action23">MP 屈曲</string>
    <string name="mmt_action24">PIP 屈曲</string>
    <string name="mmt_action25">DIP 屈曲</string>
    <string name="mmt_action26">MP 伸展</string>
    <string name="mmt_action27">内收</string>
    <string name="mmt_action28">外展</string>
    <string name="mmt_action29">对掌</string>
    <string name="mmt_action30">MP 屈曲</string>
    <string name="mmt_action31">IP 屈曲</string>
    <string name="mmt_action32">MP 伸展</string>
    <string name="mmt_action33">IP 伸展</string>
    <string name="mmt_action34">外展</string>
    <string name="mmt_action35">内收</string>
    <string name="gmfm_total_score">总分</string>
    <string name="action_1">动作一</string>
    <string name="action_2">动作二</string>
    <string name="action_3">动作三</string>
    <string name="action_4">动作四</string>
    <string name="action_5">动作五</string>
    <string name="rank">级别</string>
</resources>