<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"
        android:background="@color/background_listView_tittle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/part1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/action_1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/septal_line_white" />
        <TextView
            android:id="@+id/part2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/action_2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/septal_line_white" />
        <TextView
            android:id="@+id/part3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/action_3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/septal_line_white" />
        <TextView
            android:id="@+id/part4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/action_4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/septal_line_white" />
        <TextView
            android:id="@+id/part5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/action_5"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/septal_line_white" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/rank"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />


    </LinearLayout>

</LinearLayout>