<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alyn1_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/app_instruction"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_16" />

        <Spinner
            android:id="@+id/spinner_edit"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:width="150dp"
            android:background="@drawable/sousuo_et_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/app_date"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:width="150dp"
            android:background="@drawable/sousuo_et_bg"
            android:gravity="center_vertical"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_15" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_maker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/app_maker"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/maker"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:width="150dp"
            android:background="@drawable/sousuo_et_bg"
            android:gravity="center_vertical"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_15" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/gmfm_total_score"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/total_score_et"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:width="150dp"
            android:background="@drawable/sousuo_et_bg"
            android:gravity="center_vertical"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_15" />


    </LinearLayout>

</LinearLayout>