<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tittle_height"
        android:background="@color/background">

        <ImageView
            android:id="@+id/medical_history_record_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/tittle_marginRight"
            android:src="@drawable/medical_history_record_back"
            android:onClick="back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/medical_history_record"
            android:textColor="@color/white"
            android:textSize="@dimen/tittle_textsize" />

        <ImageView
            android:id="@+id/patient_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/tittle_marginRight"
            android:src="@drawable/add"
            android:onClick="add"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/index_layout_marginBottom"
        android:layout_marginLeft="@dimen/index_layout_marginLeft"
        android:layout_marginRight="@dimen/index_layout_marginRight"
        android:layout_marginTop="@dimen/index_layout_marginTop"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/background_listView_tittle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="true"
                android:text="@string/medical_history_date"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/septal_line_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="true"
                android:text="@string/medical_history_relator"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/septal_line_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="true"
                android:text="@string/medical_history_reliable"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <ListView
            android:id="@+id/tables_infos_list_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:cacheColorHint="#ffffff"
            android:listSelector="#ffffff"/>


    </LinearLayout>


</LinearLayout>
